[package]
name = "cpm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.5"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1", features = ["v4"] }
